2006-02-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* INSTALL, README, doc/local/installation.doc,
	doc/local/linking.doc: Documentation updated to reflect recent
	changes in the configuration process.
	
	* configure.ac, **/Makefile.am, itpp-config.in, itpp.pc.in: Major
	changes in the configuration process. Since now it is possible to
	build and install two separate libraries: the optimised
	`libitpp.*' and debug `libitpp_debug.*'. The latter one is only
	build when `--enable-debug' switch is used during configuration.
	`itpp-config' script has been extened with `--cflags-debug' and 
	`--libs-debug' switches.
	Besides, if CXXFLAGS is not set in the shell environment, it is
	initialised with "-O3 -pipe" or "-O3" flags by default.

2006-02-16  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/matfunc_test.cpp: Minor fix of rounding precision.

	* itpp-config.in, itpp.pc.in: Readded CXXFLAGS to the
	configuration scripts.

	* configure.ac, INSTALL, doc/local/installation.doc: Removed
	`--with-march' GCC-specific optimisation switch. CXXFLAGS should
	be used instead.

2006-02-16  Erik G. Larsson  <erik_g_larsson@sourceforge.net>

	* doc/local/installation.doc, doc/local/index.doc.in: Minor update

	* itpp/comm/llr.*, tests/llr_test.ref: Minor updates

	* itpp/comm/modulator_nd.*, tests/modulator_nd.*,
	itpp/comm/sources.mk, tests/Makefile.am: First version of the
	vector/MIMO modulator class added
	
2006-02-14  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/Makefile.am: Removed limits_test, which was only useful on
	32-bit platforms

	* Makefile.common: Fixed a bug that caused that the improper
	<itpp/config.h> header file was used during compilation

	* config/acx_lapack.m4: Small fix in the automatic MKL's LAPACK
	library detection. Now using shared libraries `-lmkl_lapack32' and
	`-lmkl_lapack64' instead of a static one by default.

	* config/acx_blas.m4: Small fix in the automatic MKL's BLAS
	library detection (added missing -lpthread)
