@@ -8,4 +8,4 @@ Description: @PACKAGE_NAME@ is a C++ library of mathematical, signal processing,
 Version: @PACKAGE_VERSION@
 URL: http://itpp.sourceforge.net/
 Libs: -L${libdir} -l@PACKAGE@ @LIBS@
-Cflags: -I${includedir} @CXXFLAGS_OPT@
+Cflags: -I${includedir}
