@@ -1,5 +1,9 @@
 2006-02-17  Adam Piatyszek  <ediap@users.sourceforge.net>
 
+	* itpp-config.in, itpp.pc.in: Added `--cflags-opt' and
+	`--debug-opt' switches to `itpp-config' script. Simple `--cflags'
+	switch does not include any optimisation flags in both script.
+
 	* INSTALL, README, doc/local/installation.doc,
 	doc/local/linking.doc: Documentation updated to reflect recent
 	changes in the configuration process.
